# wheres-inflation-at

./: Dockerfile  Dockerfile.uv  Makefile  README.md  activate.sh  docker-compose.yml  requirements-dev.txt  requirements.txt
.kiro/specs/backend-frontend-reorganization/: design.md  requirements.md  tasks.md
app/: __init__.py  config.py  main.py
app/routers/: health.py
app/utils/: exceptions.py  logging.py
backend/: README.md  pyproject.toml
backend/app/models/: health.py
backend/app/routers/: __init__.py
backend/tests/: conftest.py  test_health.py
docs/: docker.md  migration-testing.md  requirements-export.md
frontend/: README.md
scripts/: export_requirements.py  run_migration_tests.py  test_dev_workflow.py  test_docker.sh  test_docker_mock.py  test_fastapi_server.py  test_migration_simple.py  test_pytest_compatibility.py  test_uv_migration.py  validate_docker.py
