[project]
name = "python-web-service-template"
version = "1.0.0"
description = "A production-ready Python web service template built with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Template Author", email = "author@example.com"}
]
license = {text = "MIT"}
keywords = ["fastapi", "web-service", "api", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/python-web-service-template"
Repository = "https://github.com/example/python-web-service-template"
Issues = "https://github.com/example/python-web-service-template/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pre-commit>=4.3.0",
]
